[project]
name = "ssh-para"
authors = [
    { name = "Franck Jouvanceau" },
]
maintainers = [
    { name = "Franck Jouvanceau" },
]

description = "Interactive Parallel SSH jobs manager"
dependencies = [
  "colorama",
  "dataclasses>=0.6; python_version < '3.7'",
  "argcomplete>=3.0.4",
  "windows-curses>=2.3.3; platform_system == 'Windows'",
]
dynamic=["version"]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.6"
keywords = ["ssh", "cli", "parallel", "jobs"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Clustering",
  "Topic :: System :: Networking",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/joknarf/ssh-para"
Documentation = "https://github.com/joknarf/ssh-para/blob/main/README.md"
Repository = "https://github.com/joknarf/ssh-para.git"

[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "ssh_para/version.py"

[project.scripts]
ssh-para = "ssh_para.ssh_para:main"
